DE1488: Clinician/Patient - All links on Help Page are getting invisible after the first click -- fixed.

--- a/docroot/css/site/mdo/vv_styles.css
+++ b/docroot/css/site/mdo/vv_styles.css
@@ -284,6 +284,10 @@ div#iconpromo2{
 	/*border-bottom: 1px solid #CCCCCC;*/
 }
 
+#helpNavContents .landingHalf a, a:active, a:visited{
+	color: #4D8993;
+}
+
 #videoVisitHelpPageContents #helpLastContents{
 	width: 700px;
 	margin: 40px 0 0;
